--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -14,15 +14,16 @@
     }
   }
   .content {
-    width: 300px;
-    height: 300px;
+    width: 340px;
+    height: 380px;
     background-color: #fff;
     margin-left: 65%;
     margin-top: 10%;
-    padding: 20px;
+    padding: 30px;
+    border-radius: 8%;
     .title {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 50px;
       font-weight: 600;
     }
     .login-btn {
